@@ -1,4 +1,4 @@
-$Id: History,v 1.22 2001-10-24 16:36:39 maire Exp $
+$Id: History,v 1.23 2001-10-29 13:53:18 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+28 oct 01: mma (muons-V03-02-08)
+- all static functions no more inlined
      
 24 oct 01: mma (muons-V03-02-07)
 - cut per material : all classes
